# BasicAssembler

./: .gitignore  BasicAssembler.sln  CMakeLists.txt  LICENSE  README.TXT  README.md
Assembler/: Assembler.vcxproj  Assembler.vcxproj.filters  CMakeLists.txt  bas.c  common.c  common.h  encoding.c  encoding.h  ifile.c  ifile.h  lexer.c  lexer.h  operand.c  operand.h  options.c  options.h  parse.c  parse.h  parsedata.c  parsedata.h  pass1.c  pass1.h  reloc.h  resize.c  resize.h  source.c  source.h  sourcepass.c  sourcepass.h  symbol.c  symbol.h
Disassembler/: CMakeLists.txt  Disassembler.vcxproj  Disassembler.vcxproj.filters  dis.c  fetch.c  fetch.h  interact.c  interact.h
Driver/: CMakeLists.txt  Driver.vcxproj  Driver.vcxproj.filters  basl.c  options.c  options.h
EXAMPLES/Forth64K/: forth.asm
ExeTool/: CMakeLists.txt  ExeTool.vcxproj  ExeTool.vcxproj.filters  dump.c  dump.h  exetool.c  fileutil.c  fileutil.h  interact.c  interact.h  loadexe.c  loadexe.h  options.c  options.h
Linker/: CMakeLists.txt  Linker.vcxproj  Linker.vcxproj.filters  binfile.c  binfile.h  blink.c  combine.c  combine.h  comfile.c  comfile.h  consolidate.c  consolidate.h  exefile.c  exefile.h  fixup.c  fixup.h  format.c  format.h  grouplist.c  grouplist.h  image.c  image.h  module.c  module.h  offset_info.c  offset_info.h  output.c  output.h  resolve.c  resolve.h  seglist.c  seglist.h  segment.c  segment.h  segment_layout.c  segment_layout.h  segmented.c  segmented.h  symbol.c  symbol.h
ObjectTool/: CMakeLists.txt  ObjectTool.vcxproj  ObjectTool.vcxproj.filters  bob.c
Shared/: CMakeLists.txt  CuTest.c  CuTest.h  Shared.vcxitems  Shared.vcxitems.filters  Shared.vcxproj  Shared.vcxproj.filters  decoder.c  decoder.h  disassemble.c  disassemble.h  estring.c  estring.h  exeheader.h  instable.c  instable.h  object.c  object.h  opclass.c  opclass.h  operand.c  operand.h  reader.c  reader.h  stringlist.c  stringlist.h  timer.c  timer.h  token.c  token.h  utils.c  utils.h
test/: instable.py  test.cfg  test.py  testdis.py  testgen.py  testlib.py
test/asm/: 286.asm  286.co_  286.ex_  286P.asm  286P.co_  286P.ex_  286X.asm  286X.co_  286X.ex_  287.asm  287.co_  287.ex_  8087.asm  8087.co_  8087.ex_  adc.asm  adc.co_  adc.ex_  call.asm  call.co_  call.ex_  cmps.asm  cmps.co_  cmps.ex_  complete.asm  complete.co_  complete.ex_  db.asm  db.co_  (+139 more)
(+272 files in other folders)
